# tapwire

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CURSOR_RUST_CODE_REVIEWER.md  HANDOFF-SUMMARY.md  MCP_VERSION_NEGOTIATION_ANALYSIS.md  NEXT_SESSION_PROMPT.md  NEXT_SESSION_PROMPT_008_5.md  NEXT_SESSION_PROMPT_CLI.md  NEXT_SESSION_PROMPT_CLI_OPTIMIZATION.md  NEXT_SESSION_PROMPT_SSE_PROXY.md  NEXT_SESSION_PROMPT_TRANSPORT_REFACTOR.md  NEXT_SESSION_PROMPT_WASSETTE.md  PHASE5B_DAY4_HTTP_POLICY_COMPLETE.md  PROXY_SSE_TRACKER_UPDATES.md  README.md  SSE_INTEGRATION_UPDATES.md  SSE_RECONNECT_RETRY_REFACTOR.md  gpt_pool_mod.rs  shadowcat_code_review.md
.claude/: git-workflow.md  planning-process.md  security-requirements.md
docs/: README.md  api-reference.md  architecture.md  deployment.md  developer-guide.md  mcp-validator-quick-start.md  mcp-validator-testing.md
plans/: 001-initial-prd.md  002-shadowcat-architecture-plan.md  003-shadowcat-developer-guide.md  005-shadowcat-phase1-completion.md  006-shadowcat-phase2-plan.md  009-shadowcat-phase4-plan.md  011-phase4-completion-report.md  012-phase4-final-completion-report.md  013-advanced-actions-implementation-issues.md  014-phase5-security-auth-architecture.md  015-phase5-implementation-roadmap.md  016-phase5-research-strategy.md  022-phase5b-authentication-implementation-plan.md  023-phase5b-continuation-context.md  README.md  integration-coordination.md  mcp-auto-suggest-gpt5.md  mcp-auto-suggest-opus4.md  phase5b-continuation-context.md  (+5 more)
plans/mcp-compliance-check/templates/: Cargo.toml  initial-tests.rs
(+835 files in other folders)
