[package]
name = "mcp"
version = "0.1.0"
edition = "2021"
authors = ["Shadowcat MCP Extraction"]
description = "Model Context Protocol implementation extracted from shadowcat"
license = "MIT"

[dependencies]
# Core dependencies (minimal for now)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

# For types.rs
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Will need these later (Phase B.2+)
# tokio = { version = "1.35", features = ["full"] }
# async-trait = "0.1"
# bytes = "1.5"
# futures = "0.3"

[dev-dependencies]
# For testing
tokio = { version = "1.35", features = ["full"] }
pretty_assertions = "1.4"

[[example]]
name = "demo"
path = "examples/demo.rs"

[features]
default = []
# Version-specific features (future)
v2025_03_26 = []
v2025_06_18 = []

[lib]
name = "mcp"
path = "src/lib.rs"